--- a/config/database.yml
+++ b/config/database.yml
@@ -11,15 +11,15 @@ default: &default
 
 development:
   <<: *default
-  database: db/my_database_development
+  database: db/my_database_development.sqlite3
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/my_database_test
+  database: db/my_database_test.sqlite3
 
 production:
   <<: *default
-  database: db/my_database_production
+  database: db/my_database_production.sqlite3
